Avoid too large spaces between paragraphs

--- a/_sass/base/_typo.scss
+++ b/_sass/base/_typo.scss
@@ -87,7 +87,7 @@ dl,
 blockquote,
 pre,
 caption {
-  margin: $default-line-height * 1em 0;
+  margin: $default-line-height * 0.5em 0;
 }
 
 dt {
